<resources>
    <string name="app_name">gdou_chb</string>
    <string name="tab_home">首页</string>
    <string name="tab_order">订单</string>
    <string name="tab_usercenter">个人中心</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">帐号</string>
    <string name="prompt_password">密码</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址不合法</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不争气</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">需要联系人权限</string>

    <!-- Strings related to register -->
    <string name="register">注册</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="phone_number">手机号</string>
    <string name="check_number">验证码</string>
    <string name="hint_account">请输入你的账户，8-15位，首位是英文字母</string>
    <string name="hint_password">请输入你的密码，6-15位</string>
    <string name="hint_phone_number">请输入你的手机号</string>
    <string name="hint_check_number">请输入你的验证码</string>
    <string name="user_name">用户名</string>

    <!-- Strings related to user_center -->
    <string name="setting">设置</string>
    <string name="safe_center">安全中心</string>
    <string name="address">收货地址</string>
    <string name="question_request">问题反馈</string>
    <string name="about">关于吃货宝</string>
    <string name="sign_out">退出登录</string>

    <!-- Strings related to home_page -->
    <string name="gps">定位</string>
    <string name="search">搜索</string>
    <string name="shop_name">这里是商家名</string>
    <string name="shop_introduce">这里是商家介绍</string>
    <string name="starting_price">起送价</string>

    <!-- Strings related to trolley -->
    <string name="total">总价</string>
    <string name="place_order">立即下单</string>

    <!-- Strings related to goods -->
    <string name="good_name">商品名</string>
    <string name="price">单价</string>

    <!-- Strings related to rate -->
    <string name="rate">评价</string>
    <string name="hint_rate">请输入你的评价</string>


    <!-- Strings related to about -->
    <string name="normal_question">常见问题</string>
    <string name="question">问题1：
    ..............................................................
    ..............................................
    ..............................................................</string>
    <string name="team">制作团队</string>
    <string name="team_name">Mr陈</string>
    <string name="serve_phone">服务电话：12345678</string>

    <!-- Strings related to change_phone -->
    <string name="change_phone">修改手机号</string>
    <string name="first_phone">请输入你原先的手机号</string>
    <string name="verification_code">请输入你的验证码</string>
    <string name="second_phone">请输入你新的手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="confirm">确认修改</string>\

    <!-- Strings related to change_password -->
    <string name="change_password">修改密码</string>
    <string name="first_password">请输入你的原密码</string>
    <string name="hint_new_password">请输入你的新密码，6-15位</string>
    <string name="hint_confirm_password">请再次输入你的新密码，6-15位</string>

    <!-- Strings related to report -->
    <string name="report">问题反馈</string>
    <string name="hint_report">填写你的问题:</string>
    <string name="report_btn">提交</string>

    <!-- Strings related to change_address -->
    <string name="con_phone">电话：</string>
    <string name="con_address">地址：</string>
    <string name="con_name">联系人：</string>

    <!-- Strings related to order -->
    <string name="order_mun">订单号：</string>
    <string name="data">日期：</string>
    <string name="time">时间：</string>
    <string name="wait_time">已等待时间：</string>
    <string name="remarks">备注</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="fee">配送费</string>
    <string name="charge_back">退单</string>
    <string name="receive_order">接单</string>
    <string name="finsh">订单已完成</string>
    <string name="wait_receive">等待接单</string>
    <string name="wait_pay">等待付款</string>
    <string name="order_money">￥99</string>
    
    <string name="ok">确定</string>
    <string name="cancel">取消</string>




    <string name="news_one_title">商家1</string>
    <string name="news_one_desc">and ows the dark van ramming the nose of a police car before retreating in reverse</string>

    <string name="news_two_title">商家2</string>
    <string name="news_two_desc">(CNN)-Hugh Jackman may be finished playing Wolverine in Marvels X-Men films,but the actior still uses his superhuman powers to impact global poverty，Humanitarianism is deeply ingrained in Jackman upbringing. His father, Christopher Jackman, instilled the value of giving through his work as a volunteer accountant for charities serving the developing world.
    I suppose he was leading by example, Jackman said. Areas of poverty and extreme poverty, I learned, are not a natural state. It is man-made and solvable.</string>
    <string name="news_three_title">商家3</string>
    <string name="news_three_desc">Australia in charge of second Test against West Indies in Jamaica</string>
    <string name="news_four_title">商家4</string>
    <string name="news_four_desc">记得关注哦</string>
</resources>
