<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@xml/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp">

        <EditText
            android:id="@+id/first_phone"
            android:inputType="phone"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/first_phone"
            android:textColorHint="#BEBEBE"
            android:maxLines="1"
            android:maxLength="11"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/first_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:text="@string/send_code"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/verification_code1"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/verification_code"
            android:textColorHint="#BEBEBE"
            android:maxLines="1"
            android:maxLength="4"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/second_phone"
            android:inputType="phone"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/second_phone"
            android:textColorHint="#BEBEBE"
            android:maxLines="1"
            android:maxLength="11"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/second_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:text="@string/send_code"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/verification_code2"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/verification_code"
            android:textColorHint="#BEBEBE"
            android:maxLines="1"
            android:maxLength="4"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="120dp"
        android:paddingRight="120dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"/>

</LinearLayout>