<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about">

    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/about_toolbar"
        android:background="?attr/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        >
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="14dp"
        android:paddingEnd="16dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="常见问题"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/question" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/question" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/question" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/question" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="14dp"
        android:paddingEnd="16dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/team"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/team_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/team_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/black"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:paddingEnd="16dp"
            android:paddingStart="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_phone"
            android:gravity="center"
            android:text="@string/serve_phone"
            android:textColor="@color/black"
            android:textSize="15sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp"
                android:background="@color/black"/>
        </LinearLayout>

</LinearLayout>